--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -57,6 +57,7 @@
 % use \FloatBarrier to control float environ
 \usepackage[section]{placeins}
 \usepackage{siunitx}
+\usepackage{color,soul}
 
  % For generating glossaries:
 \include{./glossary/glossary}
