--- a/references.bib
+++ b/references.bib
@@ -4558,3 +4558,159 @@ url = {https://doi.org/10.1080/03014460.2018.1448889 https://www.tandfonline.com
 volume = {45},
 year = {2018}
 }
+
+
+@article{Gunderson2005,
+abstract = {Oligonucleotide probe arrays have enabled massively parallel analysis of gene expression levels from a single cDNA sample. Application of microarray technology to analyzing genomic DNA has been stymied by the sequence complexity of the entire human genome. A robust, single base-resolution direct genomic assay would extend the reach of microarray technology. We developed an array-based whole-genome genotyping assay that does not require PCR and enables effectively unlimited multiplexing. The assay achieves a high signal-to-noise ratio by combining specific hybridization of picomolar concentrations of whole genome-amplified DNA to arrayed probes with allele-specific primer extension and signal amplification. As proof of principle, we genotyped several hundred previously characterized SNPs. The conversion rate, call rate and accuracy were comparable to those of high-performance PCR-based genotyping assays.},
+author = {Gunderson, Kevin L. and Steemers, Frank J. and Lee, Grace and Mendoza, Leo G. and Chee, Mark S.},
+doi = {10.1038/ng1547},
+file = {:home/murraycadzow/Dropbox/Papers/ng1547.pdf:pdf},
+isbn = {1061-4036 (Print)},
+issn = {10614036},
+journal = {Nature Genetics},
+number = {5},
+pages = {549--554},
+pmid = {15838508},
+title = {{A genome-wide scalable SNP genotyping assay using microarray technology}},
+volume = {37},
+year = {2005}
+}
+
+@article{Wang1998,
+abstract = {Single-nucleotide polymorphisms (SNPs) are the most frequent type of variation in the human genome, and they provide powerful tools for a variety of medical genetic studies. In a large-scale survey for SNPs, 2.3 megabases of human genomic DNA was examined by a combination of gel-based sequencing and high-density variation-detection DNA chips. A total of 3241 candidate SNPs were identified. A genetic map was constructed showing the location of 2227 of these SNPs. Prototype genotyping chips were developed that allow simultaneous genotyping of 500 SNPs. The results provide a characterization of human diversity at the nucleotide level and demonstrate the feasibility of large-scale identification of human SNPs.},
+author = {Wang, David G and Fan, Jian-bing and Siao, Chia-jen and Berno, Anthony and Young, Peter and Sapolsky, Ron and Ghandour, Ghassan and Perkins, Nancy and Winchester, Ellen and Spencer, Jessica and Kruglyak, Leonid and Stein, Lincoln and Hsie, Linda and Topaloglou, Thodoros and Hubbell, Earl and Robinson, Elizabeth and Mittmann, Michael and Morris, Macdonald S and Shen, Naiping and Kilburn, Dan and Rioux, John and Nusbaum, Chad and Rozen, Steve and Hudson, Thomas J and Lipshutz, Robert and Chee, Mark and Lander, Eric S},
+file = {:home/murraycadzow/Dropbox/Papers/1077.full.pdf:pdf},
+number = {MAY},
+title = {{Large-Scale Identification , Mapping , and Genotyping of Single-Nucleotide Polymorphisms in the Human Genome}},
+volume = {280},
+year = {1998}
+}
+
+@article{Metzker2010,
+abstract = {Demand has never been greater for revolutionary technologies that deliver fast, inexpensive and accurate genome information. This challenge has catalysed the development of next-generation sequencing (NGS) technologies. The inexpensive production of large volumes of sequence data is the primary advantage over conventional methods. Here, I present a technical review of template preparation, sequencing and imaging, genome alignment and assembly approaches, and recent advances in current and near-term commercially available NGS instruments. I also outline the broad range of applications for NGS technologies, in addition to providing guidelines for platform selection to address biological questions of interest.},
+archivePrefix = {arXiv},
+arxivId = {209},
+author = {Metzker, Michael L.},
+doi = {10.1038/nrg2626},
+eprint = {209},
+file = {:home/murraycadzow/Dropbox/Papers/nrg2626.pdf:pdf},
+isbn = {1471-0056},
+issn = {14710056},
+journal = {Nature Reviews Genetics},
+number = {1},
+pages = {31--46},
+pmid = {19997069},
+publisher = {Nature Publishing Group},
+title = {{Sequencing technologies the next generation}},
+url = {http://dx.doi.org/10.1038/nrg2626},
+volume = {11},
+year = {2010}
+}
+
+@article{Li2008,
+author = {Li, Heng and Ruan, Jue and Durbin, Richard},
+doi = {10.1101/gr.078212.108.},
+file = {:home/murraycadzow/Dropbox/Papers/Genome Res.-2008-Li-1851-8.pdf:pdf},
+journal = {Genome research},
+pages = {1851--1858},
+title = {{Mapping short DNA sequencing reads and calling variants using mapping}},
+url = {http://pixfunlobdot.59.to/content/18/11/1851.full},
+year = {2008}
+}
+
+@article{Maliepaard2001,
+abstract = {High expression of the Breast Cancer Resistance Protein (BCRP) gene has been shown to be involved in resistance to chemotherapeutic drugs. Knowledge of the localization of BCRP protein in normal tissues may help unravel the normal function of this protein. Therefore, we characterized the tissue distribution and cellular localization of BCRP in frozen sections of normal human tissues. For this purpose, we used the recently described monoclonal antibody BXP-34 and another independently developed monoclonal antibody directed against BCRP, BXP-21. Both monoclonal antibodies show specific BCRP plasma membrane staining on cytospins obtained from topotecan- or mitoxantrone-selected cell lines, as well as from BCRP-transfected cell lines. Immunoprecipitation experiments using either BXP-21 or BXP-34 yielded a clear M(r) 72,000 BCRP band from BCRP-overexpressing tumor cells. In the topotecan-selected T8 and mitoxantrone-selected MX3 tumor cell lines, BCRP turned out to be differentially glycosylated. In contrast to BXP-34, BXP-21 is able to detect the M(r) 72,000 BCRP protein on immunoblots and is reactive with BCRP in formalin-fixed, paraffin-embedded tissues. Using BXP-21 and BXP-34, prominent staining of BCRP was observed in placental syncytiotrophoblasts, in the epithelium of the small intestine and colon, in the liver canalicular membrane, and in ducts and lobules of the breast. Furthermore, BCRP was present in veinous and capillary endothelium, but not in arterial endothelium in all of the tissues investigated. In the tissues studied, the mRNA levels of BCRP were assessed using reverse transcription-PCR, and these corresponded with the levels of BCRP protein estimated from immunohistochemical staining. The presence of BCRP at the placental syncytiotrophoblasts is consistent with the hypothesis of a protective role of BCRP for the fetus. The apical localization in the epithelium of the small intestine and colon indicates a possible role of BCRP in the regulation of the uptake of p.o. administered BCRP substrates by back-transport of substrate drugs entering from the gut lumen. Therefore, it may be useful to attempt to modulate the uptake of p.o. delivered BCRP substrates, e.g., topotecan or irinotecan, by using a BCRP inhibitor. Clinical trials testing this hypothesis have been initiated in our institute.},
+author = {Maliepaard, M and Scheffer, G L and Faneyte, I F and van Gastelen, M A and Pijnenborg, A C and Schinkel, A H and {van De Vijver}, M J and Scheper, R J and Schellens, J H},
+file = {:home/murraycadzow/Dropbox/Papers/3458.full.pdf:pdf},
+issn = {0008-5472},
+journal = {Cancer research},
+month = {apr},
+number = {8},
+pages = {3458--64},
+pmid = {11309308},
+title = {{Subcellular localization and distribution of the breast cancer resistance protein transporter in normal human tissues.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/11309308},
+volume = {61},
+year = {2001}
+}
+
+@article{Fabregat2018,
+abstract = {The Reactome Knowledgebase (https://reactome.org) provides molecular details of signal transduction, transport, DNA replication, metabolism, and other cellular processes as an ordered network of molecular transformations-an extended version of a classic metabolic map, in a single consistent data model. Reactome functions both as an archive of biological processes and as a tool for discovering unexpected functional relationships in data such as gene expression profiles or somatic mutation catalogues from tumor cells. To support the continued brisk growth in the size and complexity of Reactome, we have implemented a graph database, improved performance of data analysis tools, and designed new data structures and strategies to boost diagram viewer performance. To make our website more accessible to human users, we have improved pathway display and navigation by implementing interactive Enhanced High Level Diagrams (EHLDs) with an associated icon library, and subpathway highlighting and zooming, in a simplified and reorganized web site with adaptive design. To encourage re-use of our content, we have enabled export of pathway diagrams as 'PowerPoint' files.},
+author = {Fabregat, Antonio and Jupe, Steven and Matthews, Lisa and Sidiropoulos, Konstantinos and Gillespie, Marc and Garapati, Phani and Haw, Robin and Jassal, Bijay and Korninger, Florian and May, Bruce and Milacic, Marija and Roca, Corina Duenas and Rothfels, Karen and Sevilla, Cristoffer and Shamovsky, Veronica and Shorser, Solomon and Varusai, Thawfeek and Viteri, Guilherme and Weiser, Joel and Wu, Guanming and Stein, Lincoln and Hermjakob, Henning and D'Eustachio, Peter},
+doi = {10.1093/nar/gkx1132},
+issn = {1362-4962},
+journal = {Nucleic acids research},
+month = {jan},
+number = {D1},
+pages = {D649--D655},
+pmid = {29145629},
+title = {{The Reactome Pathway Knowledgebase.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/29145629 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5753187},
+volume = {46},
+year = {2018}
+}
+
+@article{Osborn2012,
+abstract = {It is now recognized that obesity is driving the type 2 diabetes epidemic in Western countries. Obesity-associated chronic tissue inflammation is a key contributing factor to type 2 diabetes and cardiovascular disease, and a number of studies have clearly demonstrated that the immune system and metabolism are highly integrated. Recent advances in deciphering the various cellular and signaling networks that participate in linking the immune and metabolic systems together have contributed to understanding of the pathogenesis of metabolic diseases and may also inform new therapeutic strategies based on immunomodulation. Here we discuss how these various networks underlie the etiology of the inflammatory component of insulin resistance, with a particular focus on the central roles of macrophages in adipose tissue and liver.},
+author = {Osborn, Olivia and Olefsky, Jerrold M.},
+doi = {10.1038/nm.2627},
+file = {:home/murraycadzow/Dropbox/Papers/nm.2627.pdf:pdf},
+isbn = {1546-170X (Electronic)$\backslash$r1078-8956 (Linking)},
+issn = {10788956},
+journal = {Nature Medicine},
+number = {3},
+pages = {363--374},
+pmid = {22395709},
+publisher = {Nature Publishing Group},
+title = {{The cellular and signaling networks linking the immune system and metabolism in disease}},
+url = {http://dx.doi.org/10.1038/nm.2627},
+volume = {18},
+year = {2012}
+}
+
+@article{Zhai2009,
+abstract = {In this report, we investigate the statistical power of several tests of selective neutrality based on patterns of genetic diversity within and between species. The goal is to compare tests based solely on population genetic data with tests using comparative data or a combination of comparative and population genetic data. We show that in the presence of repeated selective sweeps on relatively neutral background, tests based on the dN/dS ratios in comparative data almost always have more power to detect selection than tests based on population genetic data, even if the overall level of divergence is low. Tests based solely on the distribution of allele frequencies or the site frequency spectrum, such as the Ewens–Watterson test or Tajima's D, have less power in detecting both positive and negative selection because of the transient nature of positive selection and the weak signal left by negative selection. The Hudson–Kreitman–Aguade ´ test is the most powerful test for detecting positive selection among the population genetic tests investigated, whereas McDonald–Kreitman test typically has more power to detect negative selection. We discuss our findings in the light of the discordant results obtained in several recently published genomic scans},
+author = {Zhai, Weiwei and Nielsen, Rasmus and Slatkin, Montgomery},
+doi = {10.1093/molbev/msn231},
+file = {:home/murraycadzow/Dropbox/Papers/msn231.pdf:pdf},
+isbn = {0737-4038},
+issn = {07374038},
+journal = {Molecular Biology and Evolution},
+keywords = {Ewens-Watterson test,Genomic scan,HKA test,McDonald-Kreitman test,Neutrality test,Statistical power,Tajima's D,dN/dS},
+number = {2},
+pages = {273--283},
+pmid = {18922762},
+title = {{An investigation of the statistical power of neutrality tests based on comparative and population genetic data}},
+volume = {26},
+year = {2009}
+}
+
+@article{Cleophas2017,
+abstract = {As a result of the association of a common polymorphism (rs2231142, Q141K) in the ATP-binding cassette G2 (ABCG2) transporter with serum urate concentration in a genome-wide association study, it was revealed that ABCG2 is an important uric acid transporter. This review discusses the relevance of ABCG2 polymorphisms in gout, possible etiological mechanisms, and treatment approaches. The 141K ABCG2 urate-increasing variant causes instability in the nucleotide-binding domain, leading to decreased surface expression and function. Trafficking of the protein to the cell membrane is altered, and instead, there is an increased ubiquitin-mediated proteasomal degradation of the variant protein as well as sequestration into aggresomes. In humans, this leads to decreased uric acid excretion through both the kidney and the gut with the potential for a subsequent compensatory increase in renal urinary excretion. Not only does the 141K polymorphism in ABCG2 lead to hyperuricemia through renal overload and renal underexcretion, but emerging evidence indicates that it also increases the risk of acute gout in the presence of hyperuricemia, early onset of gout, tophi formation, and a poor response to allopurinol. In addition, there is some evidence that ABCG2 dysfunction may promote renal dysfunction in chronic kidney disease patients, increase systemic inflammatory responses, and decrease cellular autophagic responses to stress. These results suggest multiple benefits in restoring ABCG2 function. It has been shown that decreased ABCG2 141K surface expression and function can be restored with colchicine and other small molecule correctors. However, caution should be exercised in any application of these approaches given the role of surface ABCG2 in drug resistance.},
+author = {Cleophas, M. C. and Joosten, L. A. and Stamp, L. K. and Dalbeth, N. and Woodward, O. M. and Merriman, Tony R.},
+doi = {10.2147/PGPM.S105854},
+file = {:home/murraycadzow/Dropbox/Papers/pgpm-10-129.pdf:pdf},
+issn = {11787066},
+journal = {Pharmacogenomics and Personalized Medicine},
+keywords = {ABCG2,Allopurinol,BCRP,Gout,Polymorphism,Urate,Uric acid},
+pages = {129--142},
+pmid = {28461764},
+title = {{ABCG2 polymorphisms in gout: Insights into disease susceptibility and treatment approaches}},
+volume = {10},
+year = {2017}
+}
+
+@article{Casto2011,
+abstract = {Genome-wide association studies (GWAS) have identified more than 2,000 trait-SNP associations, and the number continues to increase. GWAS have focused on traits with potential consequences for human fitness, including many immunological, metabolic, cardiovascular, and behavioral phenotypes. Given the polygenic nature of complex traits, selection may exert its influence on them by altering allele frequencies at many associated loci, a possibility which has yet to be explored empirically. Here we use 38 different measures of allele frequency variation and 8 iHS scores to characterize over 1,300 GWAS SNPs in 53 globally distributed human populations. We apply these same techniques to evaluate SNPs grouped by trait association. We find that groups of SNPs associated with pigmentation, blood pressure, infectious disease, and autoimmune disease traits exhibit unusual allele frequency patterns and elevated iHS scores in certain geographical locations. We also find that GWAS SNPs have generally elevated scores for measures of allele frequency variation and for iHS in Eurasia and East Asia. Overall, we believe that our results provide evidence for selection on several complex traits that has caused changes in allele frequencies and/or elevated iHS scores at a number of associated loci. Since GWAS SNPs collectively exhibit elevated allele frequency measures and iHS scores, selection on complex traits may be quite widespread. Our findings are most consistent with this selection being either positive or negative, although the relative contributions of the two are difficult to discern. Our results also suggest that trait-SNP associations identified in Eurasian samples may not be present in Africa, Oceania, and the Americas, possibly due to differences in linkage disequilibrium patterns. This observation suggests that non-Eurasian and non-East Asian sample populations should be included in future GWAS.},
+author = {Casto, Amanda M. and Feldman, Marcus W.},
+doi = {10.1371/journal.pgen.1001266},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Casto, Feldman - 2011 - Genome-wide association study SNPS in the human genome diversity project populations Does selection affect unlin.pdf:pdf},
+isbn = {1553-7404 (Electronic)$\backslash$r1553-7390 (Linking)},
+issn = {15537390},
+journal = {PLoS Genetics},
+number = {1},
+pmid = {21253569},
+title = {{Genome-wide association study SNPS in the human genome diversity project populations: Does selection affect unlinked SNPS with shared trait associations?}},
+volume = {7},
+year = {2011}
+}
