--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -6,12 +6,12 @@ library(kableExtra)
 ```
 \glsresetall
 
-This chapter will set the scene and background for the basis of the research presented in this thesis. It will cover the settlement of the Pacific and highlight the health disparities facing Polynesian populations. It will then introduce natural selection and the methodologies for detecting 'signals of selection', followed by how selection may have played a role in creating the health disparities caused by metabolic disease in Polynesian populations.
+This chapter provides the background and rationale for the research presented in this thesis. It covers the settlement of the Pacific, and highlights the health disparities facing Polynesian populations and the releveance of genetics. It then introduces natural selection and the methodologies for detecting 'signals of selection', followed by how genetic selection may have played a role in creating the health disparities caused by metabolic disease in Polynesian populations.
 
 
 ## Settlement of Polynesia
 
-The Polynesian triangle is defined as the the geographic region in the Pacific Ocean bounded by \Gls{nz} in the southwest, Hawaii in the north, and Easter Island in the east [@Barcham2009]. The settlement history of this region begins with the Out of Africa migration approximately 50-100 thousand \gls{ya} [@Nielsen2017]. This migration flowed up the Levant and Arabian peninsula (45-55 k\gls{ya}) and then split into a migration to South Asia, Indonesia, and Australia (50 k\gls{ya}, @Kivisild1999; @Quintana-Murci1999), and a migration into Europe was under way 45 k\gls{ya}. From South Asia, the migration continued into East Asia (20 k\gls{ya}, @Groucutt2015). 
+The Polynesian triangle is defined as the the geographic region in the Pacific Ocean bounded by \Gls{nz} in the southwest, Hawaii in the north, and Easter Island in the east [@Barcham2009]. The settlement history of this region begins with the Out of Africa migration approximately 50-100 thousand \gls{ya} [@Nielsen2017]. This migration flowed up the Levant and Arabian peninsula (45-55 k\gls{ya}) and then split into a migration to South Asia, Indonesia, and Australia (50 k\gls{ya}, @Kivisild1999; @Quintana-Murci1999), with a migration into Europe under way 45 k\gls{ya}. From South Asia, the migration continued into East Asia (20 k\gls{ya}, @Groucutt2015). 
 
 Near Oceania is the geographic region from New Guinea and the Bismark Archipelago, through to the Solomon Islands in the east, with the remainder of the Pacific Islands east from the Reef/Santa Cruz group, southeast of the Solomon Island being Remote Oceania [@Matisoo-Smith2018]. The settlement of Near Oceania occurred first (40 k\gls{ya}), and was followed by the settlement of Remote Oceania, which reached as far as Samoan and Tonga (Western Polynesia) as part of the Lapita expansion (3 k\gls{ya}, @Matisoo-Smith2015; @Skoglund2016). After this settlement, came the peopling of the Eastern Polynesia (including the Cook Islands) (1-1.2 k\gls{ya}; @Wilmshurst2011) and then finally, the settlement of \glsdesc{nz} by \gls{nz} M\tex{\={a}}ori 800 \gls{ya} [@Duggan2014;@Matisoo-Smith2015].
 
@@ -22,7 +22,7 @@ In the 1950's and 60's there was a rural to urban migration of the Polynesian po
 
 The World Health Organisation has previously defined Metabolic Syndrome to be glucose intolerance, or diabetes mellitus, and or insulin resistance combined with at least two of the following: impaired glucose regulation or diabetes, insulin resistance, raised arterial pressure, raised plasma triglycerides or low high-density lipoproteins to cholesterol levels, central obesity, and microalbuminuria [@Alberti1998]. \Gls{hu} can also be considered a component but is not required for the condition to be recognised. \gls{hu} is defined as a serum urate $\geq$ 0.42 mmol/L in males and $\geq$ 0.36 mmol/L in females [@Choi2007b]. There has been a slight revision and refinement in the criteria for a diagnosis of metabolic syndrome [@Alberti2009]. The requirement for diabetes mellitus and or insulin resistance is no longer used, instead a requirement of having 3 of the 5 co-morbidities is used.
 
-Obesity is defined as a \gls{bmi} of >30 kg/m^2^ and is a contributing risk factor for many other diseases such as \gls{t2d} and \gls{cvd} [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Pacific people obesity is a major problem with an obesity rate of 68%. New Zealand M\tex{\={a}}ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. 
+Obesity is defined as a \gls{bmi} of >30 kg/m^2^ and is a contributing risk factor for many other diseases such as \gls{t2d} and \gls{cvd} [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Pacific people obesity is a major problem, with an obesity rate of 68%. New Zealand M\tex{\={a}}ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. 
 
 \Gls{t2d} is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing \gls{t2d} is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Pacific people and 7% in NZ M\tex{\={a}}ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013]. In New Zealand, the rate of diabetes is twice that in M\tex{\={a}}ori compared to non-M\tex{\={a}}ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
 
@@ -33,9 +33,9 @@ Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion 
 
 ## Genetic variation
 
-Genetic variation is the differences in the DNA sequence that occur between individuals of a species. Types of genetic variation include, \gls{snp} which are single base changes (or polymorphisms), and \glspl{indel}. \Glspl{indel} are either additional DNA, or DNA that had been lost, and can be short (a single base, up to approximately 100 base pairs) or long (kilobases to megabases) at which point that can also become structural variants. Other types of genetic variation include copy number variation (alterations in the number of copies of a gene from what would be expected from the ploidy of the organism), and re-arrangements such as translocations - segments of DNA moving to different chromosomes, or inversions - segments of DNA that are excised, inverted, and reinserted at the same location on the chromosome. Within population based genetic studies, such as case-control association studies, the prominent type of genetic variation that is studied are \glspl{snp}. 
+Genetic variation refers to the differences in DNA sequence that occur between individuals of a species. Types of genetic variation include, \gls{snp} which are single base changes (or polymorphisms), and \glspl{indel}. \Glspl{indel} are either additional DNA, or DNA that had been lost, and can be short (a single base, up to approximately 100 base pairs) or long (kilobases to megabases) at which point that can also become structural variants. Other types of genetic variation include copy number variation (alterations in the number of copies of a gene from what would be expected from the ploidy of the organism), and re-arrangements such as translocations - segments of DNA moving to different chromosomes, or inversions - segments of DNA that are excised, inverted, and reinserted at the same location on the chromosome. Within population based genetic studies, such as case-control association studies, the prominent type of genetic variation that is studied are \glspl{snp}. 
 
-Common methodologies of genotyping, to determine the genetic variation of an individual, is either by \gls{snp} array  or sequencing. \Gls{snp} arrays contain fluorescent probes designed for specific genetic variants that bind to DNA samples and based on the fluorescence, enable a genotype to be determined [@Wang1998;@Gunderson2005]. Sequencing technologies, such as the short read sequencing performed by the next-generation sequencers, take DNA and randomly fragment it, then determine the bases sequentially in the fragment to approximately 150 bp from the start to create a 'read' [@Metzker2010]. The reads are then aligned to a reference genome and at each base of the genome a genotype is called by using the distribution of bases from reads overlapping that position [@Li2008; @mckenna2010genome]. One of the key differences between \gls{snp} arrays and sequencing is that \gls{snp} arrays capture known variation, whereas sequencing allows for unknown genetic variants to be genotyped.
+Common methodologies of genotyping, to determine the genetic variation of an individual, are \gls{snp} arrays  or sequencing. \Gls{snp} arrays, such as the Illumina Human CoreExome beadchip contain probes designed for specific genetic variants that bind DNA samples, and after a single base extension step with a labelled nucleotide, enable a genotype to be determined from a fluorence sensitive scanner [@Wang1998;@Gunderson2005; Shen2005]. Sequencing technologies, such as the short read sequencing performed by the next-generation sequencers, take DNA and randomly fragment it, then determine the bases sequentially in the fragment to approximately 150 bp from the start to create a 'read' [@Metzker2010]. The reads are then aligned to a reference genome and at each base of the genome a genotype is called by using the distribution of bases from reads overlapping that position [@Li2008; @mckenna2010genome]. One of the key differences between \gls{snp} arrays and sequencing is that \gls{snp} arrays capture known variation, whereas sequencing allows for unknown genetic variants to be genotyped.
 
 ## Natural selection
 
@@ -54,7 +54,7 @@ Natural selection seems to be the more popular model to the neutral hypothesis, 
 
 ### Selection
 
-Possible types of selection that can act upon a population include balancing, background, or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as "over-dominant selection". An two examples of this is MHC class 1 [@Hughes1988] and sickle-cell anaemia [@Allison1956]. With sickle-cell anaemia, individuals homozygous for normal haemoglobin alpha are susceptible to malaria, individuals homozygote for the 'sickling' mutation develop sickle-cell disease, and the heterozygote has a protective effect against malarial infection [Aidoo2002]. "Background selection" is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Genetic hitch-hiking occurs when a locus is under selection, linked sites on the same chromosome will increase in frequency, causing a change in frequency of the alleles that are not on the same chromosome [@Smith1974]. \Gls{ld} can arise at sites that are under directional selection, even when the loci are unlinked [@Felsenstein1965] but, recombination will act to reduce this \gls{ld}. 
+Possible types of selection that can act upon a population include balancing, background, or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as "over-dominant selection". Two examples of this are MHC class 1 [@Hughes1988] and sickle-cell anaemia [@Allison1956]. With sickle-cell anaemia, individuals homozygous for normal haemoglobin alpha are susceptible to malaria, individuals homozygote for the 'sickling' mutation develop sickle-cell disease, and the heterozygote has a protective effect against malarial infection [Aidoo2002]. "Background selection" is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Genetic hitch-hiking occurs when a locus is under selection, linked sites on the same chromosome will increase in frequency, causing a change in frequency of the alleles that are not on the same chromosome [@Smith1974]. \Gls{ld} can arise at sites that are under directional selection, even when the loci are unlinked [@Felsenstein1965] but, recombination will act to reduce this \gls{ld}. 
 
 Directional selection operates in two fashions, positive or negative. Positive selection is where an allele conveys an advantage in fitness that enhances reproductive success, resulting in the beneficial allele increasing in frequency within the population. An example of positive selection is the lactase gene in European populations which enables the absorption of lactose [@Bersaglieri2004]. Negative selection occurs when the allele conveys a fitness disadvantage and ends with reduced reproductive success, decreasing the frequency of the allele in the population. The cystic fibrosis gene _CFTR_, is an example of negative selection, where in males splicing mutations can lead to sterility [@Pagani2005].
 
@@ -73,11 +73,11 @@ A soft sweep occurs when an initially fitness-neutral allele evolving under drif
 
 A partial or incomplete sweep occurs when part way through a sweep the selective pressure is changed/removed resulting in an increase in frequency for the allele that then returns to random genetic drift.
 
-In order to determine if a selective event has occurred, one can attempt to find what are termed “signatures of selection”. Population differentiation can sometimes be indicative of a selective event. If extreme levels of differentiation are observed at a locus between populations, this can be interpreted as evidence of positive selection. Regions of the genome that have a reduction in variability in a population can be the effect of a selective sweep. A third example of a signature of selection is deviations in the frequency spectrum for alleles beyond what would be considered possible under neutrality [@Przeworski2002]. A key signature of positive selection is the increase in proportion of high frequency variants [@fay2000hitchhiking].
+In order to determine if a selective event has occurred, one can attempt to find what are termed “signatures of selection”. Population differentiation can sometimes be indicative of a selective event. If extreme levels of differentiation are observed at a locus between populations, this can be interpreted as evidence of positive selection. Regions of the genome that have a reduction in variability in a population can be the effect of a selective sweep. A third example of a signature of selection is deviation in the frequency spectrum for alleles beyond what would be considered possible under neutrality [@Przeworski2002]. A key signature of positive selection is the increase in proportion of high frequency variants [@fay2000hitchhiking].
 
 Assuming a background of neutrality means that there needs to be a way to identify variants under selection as opposed to population demographic events, such as bottlenecks or expansions. In the case of Polynesian settlement, there is evidence for a founder effect which needs to be considered when interpreting selection results [@Kayser2006a]. It is for this reason that the unique features of a selective event need to be able to be identified from other possible features such as population demography or admixture. Population events and demography affect the entire genome, whereas selection acts on a localised region [@Stajich2005]. To be able to recreate demography, the choice in the \glspl{snp} used in the calculation of neutrality and selection statistics is important as there is chance for a large ascertainment bias if \glspl{snp} are only selected from a small number of populations [@Wall2008]. The \glspl{snp} used also need to be sampled away from genic areas.
 
-## Methods {#selMethods}
+## Methods for detecting selection {#selMethods}
 
 Since 2005 there have been multiple reviews published (see @Nielsen2005, @sabeti2006positive, @Utsunomiya2015, @Vitti2013 and @Haasl2016) on methods of identifying selection, as there has been a renewed interest to examine selection at a genome wide scale due to increased availability of whole genome genotype data. Methods that have been developed to detect signatures of selection can be placed into two main categories, those that only work on a single population and those that compare between populations. There are also specific underlying genetic features that these methods can use, such as allele frequency (frequency spectrum methods) or differences in haplotype (linkage methods). There are also methods that combine different approaches (composite methods). A summary of selection methods is provided in Table \@ref(tab:selectionMethods).
 
