reworded paragraph to not have so many repeats of 'evidence'
closes #57

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -70,7 +70,7 @@ An increased level of urate in the blood is called \gls{hu} and is causal of gou
 
 \Gls{hu} has two main components: overproduction of urate, and under-excretion. Overproduction is influenced by diet, such as high purine or fructose content, or increased cell turnover as observed in cancer, or under genetic control. Under-excretion is the main cause of \gls{hu}, caused by either increased reabsorption or decreased secretion. The kidneys are the organ where the majority of secretion and excretion of urate is performed, with about 90% of urate being reabsorbed [@Kutzing2008]. In the proximal tubule, on the apical membrane, the urate transporters of URAT1, OAT4, and SLC2A9 reabsorb urate, whereas ABCC4, NPT4, and NPT1 are responsible for secretion [@Mandal2015]. On the basolateral membrane, OAT1-3, increase intracellular uric acid, but SLC2A9 moves uric acid from intracellular to extracellular [@Mandal2015]. The ATP powered transporter ABCG2 is responsible for excretion of urate in the gut and there are \glspl{snp} that lead to a reduction of function in ABCG2 in all populations [@Phipps-Green2010;@Cleophas2017]. Together the genes _SLC2A9_ and _ABCG2_ account for 3.4% of the genetic variability of urate [@Kottgen2013].
 
-From previous studies there is prior evidence of selection at urate associated loci [@Zhang2013a; @Grossman2013; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population had evidence. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of \gls{hu} also have evidence of selection, with loci associated with \gls{t2d} having been found to have evidence of having undergone selection [@pickrell2009signals; @voight2006map; @Grossman2010, @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
+From previous studies there is prior evidence of selection at urate associated loci [@Zhang2013a; @Grossman2013; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population was reported as having been selected. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the urate-associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of \gls{hu} also show signs of selection, with loci associated with \gls{t2d} having been reported as having undergone selection [@pickrell2009signals; @voight2006map; @Grossman2010, @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
 
 <!-- need to reword as too many used of "has evidence"-->
 
